# Rust-ATM-Protocol

./: Cargo.toml  Makefile  README.md  alice.card  ana.card  bank.auth  bob.card
src/: atm.rs  atm_parser.rs  bank.rs  commands.rs
src/atm/: alice.card  atm.rs  atm_parser.rs  bank.auth  bob.card  bob2.card  message_type.rs  operations.rs
src/bank/: bank.auth  bank.rs  bank_parser.rs
src/utils/: atm_parser.rs  bank_parser.rs  message_type.rs  mod.rs  operations.rs  validate_functions.rs
