[package]
name = "atm_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
rsa = "0.9.6"
rand = "0.8.5"

[[bin]]
name = "atm"
path = "src/atm/atm.rs"

[[bin]]
name = "bank"
path = "src/bank/bank.rs"

