[package]
name = "atm_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
rsa = "0.9.6"
rand = "0.8.5"
regex = "1.5.4"
textnonce = "1.0.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
x25519-dalek = "2"
ctr = "0.9.2"
aes = "0.8.4"
cipher = "0.4.4"

[[bin]]
name = "atm"
path = "src/atm/atm.rs"

[[bin]]
name = "bank"
path = "src/bank/bank.rs"

[lib]
name = "utils"
path = "src/utils/mod.rs"
