[package]
name = "atm_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
rsa = "0.9.6"
rand = "0.8.5"
regex = "1.5.4"
textnonce = "1.0.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
x25519-dalek = "2"
cipher = "0.4.4"
aes-gcm-siv = "0.11.1"
blake3 = "1.5.1"
ctrlc = { version = "3.4.4", features = ["termination"] }
dashmap = "5.5.3"

[[bin]]
name = "atm"
path = "src/atm/atm.rs"

[[bin]]
name = "bank"
path = "src/bank/bank.rs"

[lib]
name = "utils"
path = "src/utils/mod.rs"

[profile.dev]
opt-level = 3
